<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_buttonsLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/main_title"
        />

   <LinearLayout
       android:id="@+id/main_buttonsLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toTopOf="parent">

       <Button
           android:id="@+id/main_barcode_btn"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_marginHorizontal="60dp"
           android:text="@string/main_barcode_btn"/>

       <Button
           android:id="@+id/main_ibeacon_btn"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_marginHorizontal="60dp"
           android:text="@string/main_ibeacon_btn"/>

       <Button
           android:id="@+id/main_nfc_btn"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_marginHorizontal="60dp"
           android:text="@string/main_nfc_btn"/>

   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>