<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NfcActivity">

    <LinearLayout
        android:id="@+id/nfc_buttonsLayout"
        android:layout_width="310dp"
        android:layout_height="194dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfc_username_input" />

        <EditText
            android:id="@+id/nfc_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfc_password_input" />

        <EditText
            android:id="@+id/nfc_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/nfc_connect_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfc_connect_btn" />

        <TextView
            android:id="@+id/nfc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfc_read_ask"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>